# bosgenesis-esda

./: .env.example  .env.helm.example  .env.ingress.example  .env.local.example  .gitignore  README.md  docker-compose.yml  kill-esda.bat  plan.md  pyproject.toml  start-esda.bat
backend/app/: activity.py  approvals.py  artifact_publisher.py  artifacts.py  config.py  dependencies.py  digital_twin_gateway.py  digital_twin_mock.py  env_agent.py  l4.py  main.py  memory.py  mop_bundle.py  mop_execution.py  repo_analysis.py
backend/tests/: test_approvals.py  test_artifact_publisher.py  test_artifacts.py  test_azure_llm_config.py  test_digital_twin_launch_ui_contract.py  test_digital_twin_phase0_contracts.py  test_digital_twin_phase1_static_prototype.py  test_digital_twin_phase2_browser_mock.py  test_digital_twin_phase3_server_mock.py  test_digital_twin_phase4_real_gateway.py  test_digital_twin_phase7_product_journey.py  test_env_agent_phase_a.py  test_env_agent_phase_b.py  test_env_agent_phase_c.py  test_env_agent_phase_e.py  test_env_agent_phase_f.py  test_env_agent_phase_h.py  test_ingress_config.py  test_l4.py  test_mop_execution_phase6_twin_gate.py  test_mop_execution_phase_abc.py  test_mop_execution_phase_d.py  test_mop_execution_phase_e.py  test_mop_execution_phase_f.py  test_mop_execution_phase_g.py  test_mop_execution_phase_h.py  test_mop_execution_phase_i.py  test_mop_execution_phase_j.py  test_mop_execution_phase_k.py  test_security.py  (+11 more)
knowledge-base/: baseline_idea.md  bosgenesis_esda_chatbot_lld.md  hld.md  policy_rules.yaml  project_architecture_specification.md
(+127 files in other folders)
