[project]
name = "bosgenesis-esda"
version = "0.1.0"
description = "BOS Genesis ESDA Chatbot Console"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "azure-identity>=1.19",
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "langchain>=0.3",
  "langchain-openai>=0.2",
  "langgraph>=0.2",
  "langmem>=0.0.20",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "qdrant-client>=1.10",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.23",
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
